test/negative/afteruntil02.cfr
// Test for after until constraint

a
 b ?
  c ?
  d ?
  e ?
  [c after until e ]


